fix: Replace filenamify by a custom slugify
